--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "moduleResolution": "node",
       "sourceMap": true,
       "outDir": "dist",
+      "strict": true,
       "baseUrl": ".",
       "paths": {
           "*": [
